Barra iniziale riquadro

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <!-- titolo e logo -->
+
     <header class="header">
         <div class="container">
 
@@ -19,10 +20,28 @@
         </div>
     </header>
 
-    <div class="container"></div>
-    <main>
+    <!-- riquadro centrale -->
 
-    </main>
+    <div class="container">
+
+        <main class="riquadro-centrale">
+            <!-- barra iniziale -->
+            <div class="barra-iniziale">
+                <div class="add-T">
+                    <span> Add Task</span>
+                </div>
+                <div class="add-S">
+                    <span> Add Section</span>
+                </div>
+
+            </div>
+
+            <div>
+
+            </div>
+
+        </main>
+    </div>
     </div>
 </body>
 
