--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
 
             </div>
 
-            <div>
+            <div class="liste">
+                <!-- prima lista  -->
+                <h2> &#128899 New Task </h2>
+                <ul class="prima-lista">
+                    <li>
+                        <p></p><span class="spunta-verde">&#x2713</span> Quarterly Newsletter</p> <span
+                            class="add-E">Editorial</span>
 
+                    </li>
+                </ul>
             </div>
 
         </main>
