--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <main class="riquadro-centrale">
             <!-- barra iniziale -->
             <div class="barra-iniziale">
-                <div class="add-T">
+                <div class="add-blue">
                     <span> Add Task</span>
                 </div>
-                <div class="add-S">
+                <div class="add-white">
                     <span> Add Section</span>
                 </div>
 
@@ -45,6 +45,33 @@
                             class="add-E">Editorial</span>
 
                     </li>
+                </ul>
+                <!-- seconda lista -->
+                <h2> &#128899 Today </h2>
+                <ul class="prima-lista">
+                    <li>
+                        <p></p><span class="spunta-verde">&#x2713</span> Recruting blog post</p> <span
+                            class="add-E">Editorial</span>
+
+                    </li>
+                    <li>
+                        <p></p><span class="spunta-verde">&#x2713</span> Mobile app luaunch</p> <span class="add-Q">Q1
+                            Goals</span>
+
+                    </li>
+
+                    <li>
+                        <p></p><span class="spunta-rossa">&#10005</span> Interview John H.</p> <span
+                            class="add-R">Recruting</span>
+
+                    </li>
+
+                    <li>
+                        <p></p><span class="spunta-verde">&#x2713</span> Summit update to mobile storefronts</p> <span
+                            class="add-M"> Mobile</span>
+
+                    </li>
+
                 </ul>
             </div>
 
