modificate le classi e font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
 
-<body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 
     <!-- titolo e logo -->
 
@@ -41,43 +41,73 @@
                 <h2> &#128899 New Task </h2>
                 <ul class="prima-lista">
                     <li>
-                        <p></p><span class="spunta-verde">&#x2713</span> Quarterly Newsletter</p> <span
-                            class="add-E">Editorial</span>
+                        <p><span class="spunta spunta-verde">&#x2713</span> Quarterly Newsletter</p> <span
+                            class="add add-E">Editorial</span>
 
                     </li>
                 </ul>
                 <!-- seconda lista -->
                 <h2> &#128899 Today </h2>
                 <ul class="prima-lista">
-                    <li>
-                        <p></p><span class="spunta-verde">&#x2713</span> Recruting blog post</p> <span
-                            class="add-E">Editorial</span>
+                    <li class="prova-spaziatura">
+                        <p><span class="spunta spunta-verde">&#x2713</span> Recruting blog post</p> <span
+                            class="add add-E">Editorial</span>
 
                     </li>
                     <li>
-                        <p></p><span class="spunta-verde">&#x2713</span> Mobile app luaunch</p> <span class="add-Q">Q1
+                        <p><span class="spunta spunta-verde">&#x2713</span> Mobile app luaunch</p> <span
+                            class="add add-Q">Q1
                             Goals</span>
 
                     </li>
 
                     <li>
-                        <p></p><span class="spunta-rossa">&#10005</span> Interview John H.</p> <span
-                            class="add-R">Recruting</span>
+                        <p><span class="spunta spunta-rossa">&#10005</span> Interview John H.</p> <span
+                            class="add add-R">Recruting</span>
 
                     </li>
 
                     <li>
-                        <p></p><span class="spunta-verde">&#x2713</span> Summit update to mobile storefronts</p> <span
-                            class="add-M"> Mobile</span>
+                        <p><span class="spunta spunta-verde">&#x2713</span> Summit update to mobile storefronts</p>
+                        <span class="add add-M"> Mobile</span>
 
                     </li>
 
                 </ul>
+
+                <!-- terza lista -->
+
+                <h2> &#128899 Upcoming </h2>
+                <ul class="prima-lista">
+                    <li>
+                        <p><span class="spunta spunta-verde">&#10005</span> Schedule meeting with Alex</p>
+                    </li>
+                    <li>
+                        <p><span class="spunta spunta-verde">&#x2713</span> Homepage refresh</p> <span
+                            class="add add-W">Website</span>
+
+                    </li>
+
+                    <li>
+                        <p><span class="spunta spunta-rossa">&#10005</span> Onboard new Sales team Sembers</p> <span
+                            class="add add-S">Recruting</span>
+
+                    </li>
+
+                    <li>
+                        <p><span class="spunta spunta-verde">&#x2713</span> Review editorial calender</p>
+                        <span class="add add-E"> Mobile</span>
+
+                    </li>
+
+                </ul>
+
+
             </div>
 
         </main>
     </div>
     </div>
-</body>
+    </body>
 
 </html>
