--- a/index.html
+++ b/index.html
@@ -8,106 +8,113 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+</head>
+<!-- titolo e logo -->
 
-    <!-- titolo e logo -->
-
-    <header class="header">
-        <div class="container">
-
-            <img class="logo" src="./img/Logo.png" alt="">
-
-            <h1>Toboolist</h1>
-        </div>
-    </header>
-
-    <!-- riquadro centrale -->
-
+<header class="header">
     <div class="container">
 
-        <main class="riquadro-centrale">
-            <!-- barra iniziale -->
-            <div class="barra-iniziale">
-                <div class="add-blue">
-                    <span> Add Task</span>
-                </div>
-                <div class="add-white">
-                    <span> Add Section</span>
-                </div>
+        <img class="logo" src="./img/Logo.png" alt="logo">
 
+        <h1>Toboolist</h1>
+    </div>
+</header>
+
+<!-- riquadro centrale -->
+
+<div class="container">
+
+    <main class="riquadro-centrale">
+        <!-- barra iniziale -->
+        <div class="barra-iniziale">
+            <div class="add-blue">
+                <span> Add Task</span>
+            </div>
+            <div class="add-white">
+                <span> Add Section</span>
             </div>
 
-            <div class="liste">
-                <!-- prima lista  -->
-                <h2> &#128899 New Task </h2>
-                <ul class="prima-lista">
-                    <li>
-                        <p><span class="spunta spunta-verde">&#x2713</span> Quarterly Newsletter</p> <span
-                            class="add add-E">Editorial</span>
+        </div>
 
-                    </li>
-                </ul>
-                <!-- seconda lista -->
-                <h2> &#128899 Today </h2>
-                <ul class="prima-lista">
-                    <li class="prova-spaziatura">
-                        <p><span class="spunta spunta-verde">&#x2713</span> Recruting blog post</p> <span
-                            class="add add-E">Editorial</span>
+        <div class="liste">
+            <!-- prima lista  -->
+            <h2> &#128899 New Task </h2>
+            <ul class="prima-lista">
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Quarterly Newsletter</p> <span
+                        class="add add-E">Editorial</span>
 
-                    </li>
-                    <li>
-                        <p><span class="spunta spunta-verde">&#x2713</span> Mobile app luaunch</p> <span
-                            class="add add-Q">Q1
-                            Goals</span>
+                </li>
+            </ul>
+            <!-- seconda lista -->
+            <h2> &#128899 Today </h2>
+            <ul class="prima-lista">
+                <li class="prova-spaziatura">
+                    <p><span class="spunta spunta-verde">&#x2713</span> Recruting blog post</p> <span
+                        class="add add-E">Editorial</span>
 
-                    </li>
+                </li>
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Mobile app luaunch</p> <span
+                        class="add add-Q">Q1
+                        Goals</span>
 
-                    <li>
-                        <p><span class="spunta spunta-rossa">&#10005</span> Interview John H.</p> <span
-                            class="add add-R">Recruting</span>
+                </li>
 
-                    </li>
+                <li>
+                    <p><span class="spunta spunta-rossa">&#10005</span> Interview John H.</p> <span
+                        class="add add-R">Recruting</span>
 
-                    <li>
-                        <p><span class="spunta spunta-verde">&#x2713</span> Summit update to mobile storefronts</p>
-                        <span class="add add-M"> Mobile</span>
+                </li>
 
-                    </li>
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Summit update to mobile storefronts</p>
+                    <span class="add add-M"> Mobile</span>
 
-                </ul>
+                </li>
 
-                <!-- terza lista -->
+            </ul>
 
-                <h2> &#128899 Upcoming </h2>
-                <ul class="prima-lista">
-                    <li>
-                        <p><span class="spunta spunta-verde">&#10005</span> Schedule meeting with Alex</p>
-                    </li>
-                    <li>
-                        <p><span class="spunta spunta-verde">&#x2713</span> Homepage refresh</p> <span
-                            class="add add-W">Website</span>
+            <!-- terza lista -->
 
-                    </li>
+            <h2> &#128899 Upcoming </h2>
+            <ul class="prima-lista">
+                <li>
+                    <p><span class="spunta spunta-verde">&#10005</span> Schedule meeting with Alex</p>
+                </li>
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Homepage refresh</p> <span
+                        class="add add-W">Website</span>
 
-                    <li>
-                        <p><span class="spunta spunta-rossa">&#10005</span> Onboard new Sales team Sembers</p> <span
-                            class="add add-S">Recruting</span>
+                </li>
 
-                    </li>
+                <li>
+                    <p><span class="spunta spunta-rossa">&#10005</span> Onboard new Sales team Sembers</p> <span
+                        class="add add-S">Recruting</span>
 
-                    <li>
-                        <p><span class="spunta spunta-verde">&#x2713</span> Review editorial calender</p>
-                        <span class="add add-E"> Mobile</span>
+                </li>
 
-                    </li>
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Review editorial calender</p>
+                    <span class="add add-E"> Mobile</span>
 
-                </ul>
+                </li>
+
+                <li>
+                    <p><span class="spunta spunta-verde">&#x2713</span> Review editorial calender</p>
+                    <span class="add add-E"> Mobile</span>
+
+                </li>
 
 
-            </div>
+            </ul>
 
-        </main>
-    </div>
-    </div>
-    </body>
+
+        </div>
+
+    </main>
+</div>
+</div>
+</body>
 
 </html>
